--- a/Zh/resources/app/client/index.html
+++ b/Zh/resources/app/client/index.html
@@ -56,7 +56,10 @@
                     <div class="act act3"></div>
                     <div class="left_bg"></div>
 
-                    <img src="../../uploads/person/{$photo}" alt="" class="photo">
+                    <div class="photo">
+                        <img src="../../uploads/person/{$photo}" width="192" alt="">
+                    </div>
+
 
                     <div class="btn btn1" data-id="{$id}"></div>
                     <div class="btn btn2" data-id="{$id}"></div>
@@ -137,7 +140,9 @@
 
     <script type="text/template" id="View_boxs">
         <div class="swiper-slide _boxs">
-            <img class="boxs_photo" src="../../uploads/person/20180124114214198.jpg" alt="">
+            <div class="boxs_photo">
+                <img width="192" src="../../uploads/person/20180124114214198.jpg" alt="">
+            </div>
             <div class="boxs_tit">李秀红：关于解决温州科技职业学院引进人才子女入托入学问题的再建议</div>
             <div class="boxs_desc">如何使他们安心于当前的工作和生活，充分发挥各自的才华，解决他们的后顾之忧，是我们人大代表不得不考虑的问题。</div>
             <div class="pot1"></div>
