--- a/Zh/resources/app/client/index.html
+++ b/Zh/resources/app/client/index.html
@@ -48,6 +48,7 @@
 
     <script type="text/template" id="View_Word">
         <section class="cc Word" id="Word{$id}">
+            <div class="bgx" data-id="{$id}"></div>
             <div class="box">
                 <div class="title">{$nm}：{$title}</div>
                 <div class="left">
