--- a/Zh/resources/app/client/index.html
+++ b/Zh/resources/app/client/index.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="lib/swiper/dist/css/swiper.css">
     <link rel="stylesheet" href="css/nav.css">
     <link rel="stylesheet" href="css/page1.css">
+    <link rel="stylesheet" href="css/word.css">
     <link rel="stylesheet" href="css/page2.css">
     <link rel="stylesheet" href="css/page3.css">
     <link rel="stylesheet" href="css/page4.css">
     <link rel="stylesheet" href="css/page5.css">
-    <link rel="stylesheet" href="css/word.css">
-    
+
 </head>
 
 <body ondragstart="return false" onselect="return false" onselectstart="return false" oncontextmenu="return false">
@@ -169,6 +169,7 @@
 
     </section>
 
+    <!--Page1-->
     <script type="text/template" id="View_Word">
         <section class="cc Word" id="Word{$id}">
             <div class="bgx" data-id="{$id}"></div>
@@ -273,58 +274,127 @@
         </div>
     </script>
 
+    <!--Page2-->
     <script type="text/template" id="View_HBox2">
         <div class="swiper-slide box box{$year} _yearBox">
             <div class="tit"><span>{$year}</span>年</div>
 
-            <!--<div class="DBList{$year} DBList swiper-container">-->
-                <!--<div class="swiper-wrapper">-->
-                    <!--<div class="swiper-slide"></div>-->
-                    <!--<div class="swiper-slide"></div>-->
-                    <!--<div class="swiper-slide"></div>-->
-                    <!--<div class="swiper-slide"></div>-->
-                    <!--<div class="swiper-slide"></div>-->
-                    <!--<div class="swiper-slide"></div>-->
-                    <!--<div class="swiper-slide"></div>-->
-                    <!--<div class="swiper-slide"></div>-->
-                    <!--<div class="swiper-slide"></div>-->
-                    <!--<div class="swiper-slide"></div>-->
-                <!--</div>-->
-                <!--&lt;!&ndash; Add Pagination &ndash;&gt;-->
-            <!--</div>-->
-            <!--<div class="swiper-pagination-box swiper-pagination-box{$year}"></div>-->
+            <div class="DBList{$year} DBList swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">1</div>
+                    <div class="swiper-slide">2</div>
+                    <div class="swiper-slide">3</div>
+                    <div class="swiper-slide">4</div>
+                    <div class="swiper-slide">5</div>
+                    <div class="swiper-slide">6</div>
+                    <div class="swiper-slide">7</div>
+                    <div class="swiper-slide">8</div>
+                    <div class="swiper-slide">9</div>
+                    <div class="swiper-slide">0</div>
+                </div>
+                <!-- Add Pagination -->
+            </div>
+            <div class="swiper-pagination-box swiper-pagination-box{$year}"></div>
 
             <div class="pre" data-id="{$id}"></div>
             <div class="next" data-id="{$id}"></div>
+
+            <div class="_Page2_Swiper_Titles _Page2_Swiper_Titles{$year}">
+                <ul class="sw_tit">
+                    <li class="act">
+                        <span>标题1</span>
+                        <div class="pot"></div>
+                    </li>
+                    <li>
+                        <span>标题2</span>
+                        <div class="pot"></div>
+                    </li>
+                </ul>
+                <div class="line"></div>
+            </div>
         </div>
     </script>
 
+    <script type="text/template" id="View_PageBox2">
+        <div class="swiper-slide swiper-slide_list _boxs">
+            <div class="imgMark">
+                <img src="../../uploads/page2/{$img}" alt="">
+            </div>
+            <div class="word _PageWord2">
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            {$m_info}
+                        </div>
+                    </div>
+                    <!-- Add Scroll Bar -->
+                    <div class="swiper-scrollbar"></div>
+                </div>
+            </div>
+        </div>
+    </script>
+
+    <!--Page3-->
     <script type="text/template" id="View_HBox3">
         <div class="swiper-slide box box{$year} _yearBox">
             <div class="tit"><span>{$year}</span>年</div>
 
-            <!--<div class="DBList{$year} DBList swiper-container">-->
-            <!--<div class="swiper-wrapper">-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--</div>-->
-            <!--&lt;!&ndash; Add Pagination &ndash;&gt;-->
-            <!--</div>-->
-            <!--<div class="swiper-pagination-box swiper-pagination-box{$year}"></div>-->
+            <div class="DBList{$year} DBList swiper-container">
+            <div class="swiper-wrapper">
+            <div class="swiper-slide"></div>
+            <div class="swiper-slide"></div>
+            <div class="swiper-slide"></div>
+            <div class="swiper-slide"></div>
+            <div class="swiper-slide"></div>
+            <div class="swiper-slide"></div>
+            <div class="swiper-slide"></div>
+            <div class="swiper-slide"></div>
+            <div class="swiper-slide"></div>
+            <div class="swiper-slide"></div>
+            </div>
+            <!-- Add Pagination -->
+            </div>
+            <div class="swiper-pagination-box swiper-pagination-box{$year}"></div>
 
             <div class="pre" data-id="{$id}"></div>
             <div class="next" data-id="{$id}"></div>
         </div>
     </script>
 
+    <script type="text/template" id="View_PageBox3">
+        <div class="swiper-slide _boxs _PageBox3">
+            <div class="pagebox3" data-id="{$id}">
+                <div class="pagebox3_title">{$title} : </div>
+                <div class="pagebox3_info">{$m_info}</div>
+                <div class="pagebox3_back">{$back_btn}</div>
+                <div class="pagebox3_work">责任科室（职能站所）：<span>{$work}</span> </div>
+            </div>
+        </div>
+    </script>
+
+    <script type="text/template" id="View_Page3_Info">
+        <section class="cc Page3_Info" id="Page3_Info{$id}">
+            <div class="bgx" data-id="{$id}"></div>
+            <div class="box">
+                <div class="title line">
+                    <div class="tit">{$title}:</div>
+                </div>
+                <div class="m_info">{$m_info}</div>
+                <div class="back line">
+                    <div class="tit">处理情况</div>
+                </div>
+                <div class="m_info">{$back_info}</div>
+                <div class="unline line"></div>
+                <div class="work">责任科室：<span>{$work}</span></div>
+                <div class="work">责任领导：<span>{$lead}</span></div>
+
+                <div class="cls" data-id="{$id}"></div>
+            </div>
+        </section>
+    </script>
+
+
+    <!--Page4-->
     <script type="text/template" id="View_HBox4">
         <div class="swiper-slide box box{$year} _yearBox">
             <div class="tit"><span>{$year}</span>年</div>
@@ -391,7 +461,9 @@
 <script src="lib/zh.js"></script>
 <!--主程序-->
 <script src="../../assets/config.js"></script>
-<script src="js/init.js"></script>
+<script src="js/init1.js"></script>
+<script src="js/init2.js"></script>
+<script src="js/init3.js"></script>
 <script src="js/server.js"></script>
 <!--<script src="js/mp3.js"></script>-->
 
