--- a/Zh/resources/app/client/index.html
+++ b/Zh/resources/app/client/index.html
@@ -243,15 +243,6 @@
             <div class="DBList{$year} DBList swiper-container">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide"></div>
-                    <div class="swiper-slide"></div>
-                    <div class="swiper-slide"></div>
-                    <div class="swiper-slide"></div>
-                    <div class="swiper-slide"></div>
-                    <div class="swiper-slide"></div>
-                    <div class="swiper-slide"></div>
-                    <div class="swiper-slide"></div>
-                    <div class="swiper-slide"></div>
-                    <div class="swiper-slide"></div>
                 </div>
                 <!-- Add Pagination -->
             </div>
@@ -282,15 +273,6 @@
             <div class="DBList{$year} DBList swiper-container">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">1</div>
-                    <div class="swiper-slide">2</div>
-                    <div class="swiper-slide">3</div>
-                    <div class="swiper-slide">4</div>
-                    <div class="swiper-slide">5</div>
-                    <div class="swiper-slide">6</div>
-                    <div class="swiper-slide">7</div>
-                    <div class="swiper-slide">8</div>
-                    <div class="swiper-slide">9</div>
-                    <div class="swiper-slide">0</div>
                 </div>
                 <!-- Add Pagination -->
             </div>
@@ -342,15 +324,6 @@
             <div class="DBList{$year} DBList swiper-container">
             <div class="swiper-wrapper">
             <div class="swiper-slide"></div>
-            <div class="swiper-slide"></div>
-            <div class="swiper-slide"></div>
-            <div class="swiper-slide"></div>
-            <div class="swiper-slide"></div>
-            <div class="swiper-slide"></div>
-            <div class="swiper-slide"></div>
-            <div class="swiper-slide"></div>
-            <div class="swiper-slide"></div>
-            <div class="swiper-slide"></div>
             </div>
             <!-- Add Pagination -->
             </div>
@@ -399,52 +372,117 @@
         <div class="swiper-slide box box{$year} _yearBox">
             <div class="tit"><span>{$year}</span>年</div>
 
-            <!--<div class="DBList{$year} DBList swiper-container">-->
-            <!--<div class="swiper-wrapper">-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--</div>-->
-            <!--&lt;!&ndash; Add Pagination &ndash;&gt;-->
-            <!--</div>-->
-            <!--<div class="swiper-pagination-box swiper-pagination-box{$year}"></div>-->
+            <div class="DBList{$year} DBList swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"></div>
+                </div>
+                <!-- Add Pagination -->
+            </div>
+
+            <div class="ImgList{$year} ImgList swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"></div>
+                </div>
+                <!-- Add Pagination -->
+            </div>
+            <div class="ImgListPag ImgListPag{$year} swiper-pagination-box swiper-pagination-box{$year}"></div>
+
+            <div class="pre" data-id="{$id}"></div>
+            <div class="next" data-id="{$id}"></div>
+
+            <div class="_Page4_Swiper_Titles _Page4_Swiper_Titles{$year}">
+                <ul class="sw_tit">
+                    <li class="act">标题</li>
+                    <li>标题标题</li>
+                </ul>
+            </div>
+        </div>
+        </div>
+    </script>
+    <script type="text/template" id="View_PageBox4">
+        <div class="swiper-slide _boxs _PageBox4">
+
+            <div class="word _PageWord4">
+                <div class="swiper-container">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            {$m_info}
+                        </div>
+                    </div>
+                    <!-- Add Scroll Bar -->
+                    <div class="swiper-scrollbar"></div>
+                </div>
+            </div>
+
+        </div>
+    </script>
+
+    <!--Page5-->
+    <script type="text/template" id="View_HBox5">
+        <div class="swiper-slide box box{$year} _yearBox">
+            <div class="tit"><span>{$year}</span>年</div>
+
+            <div class="DBList{$year} DBList swiper-container">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"></div>
+                    <div class="swiper-slide"></div>
+                    <div class="swiper-slide"></div>
+                    <div class="swiper-slide"></div>
+                    <div class="swiper-slide"></div>
+                    <div class="swiper-slide"></div>
+                </div>
+                <!-- Add Pagination -->
+            </div>
+            <div class="swiper-pagination-box swiper-pagination-box{$year}"></div>
 
             <div class="pre" data-id="{$id}"></div>
             <div class="next" data-id="{$id}"></div>
         </div>
     </script>
 
-    <script type="text/template" id="View_HBox5">
-        <div class="swiper-slide box box{$year} _yearBox">
-            <div class="tit"><span>{$year}</span>年</div>
-
-            <!--<div class="DBList{$year} DBList swiper-container">-->
-            <!--<div class="swiper-wrapper">-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--<div class="swiper-slide"></div>-->
-            <!--</div>-->
-            <!--&lt;!&ndash; Add Pagination &ndash;&gt;-->
-            <!--</div>-->
-            <!--<div class="swiper-pagination-box swiper-pagination-box{$year}"></div>-->
-
-            <div class="pre" data-id="{$id}"></div>
-            <div class="next" data-id="{$id}"></div>
+    <script type="text/template" id="View_PageBox5">
+        <div class="swiper-slide _boxs _PageBox5">
+            <div class="pagebox5" data-id="{$id}">
+                <img width="404" height="192" src="../../uploads/page5/{$img}" alt="">
+                <div class="tit">{$title}</div>
+            </div>
         </div>
+    </script>
+
+    <script type="text/template" id="View_Page5_Info">
+        <section class="cc Page5_Info" id="Page5_Info{$id}">
+            <div class="bgx" data-id="{$id}"></div>
+            <div class="box">
+                <img src="../../uploads/page5/{$img}" alt="">
+                <div class="main">
+                    <div class="tit">
+                        <div class="title">{$title}</div>
+                        <div class="money">经费预算  {$money}</div>
+                    </div>
+                    <div class="mm">
+                        <div style="height: 50px;"></div>
+                        <div class="line">
+                            <span>主要内容</span>
+                        </div>
+                        <div class="word">
+                            {$m_info}
+                        </div>
+                        <div class="line">
+                            <span>时间安排</span>
+                        </div>
+                        <div class="word">
+                            {$time_info}
+                        </div>
+                        <div class="line"></div>
+                        <div class="ww">责任科室: <span>{$work}</span></div>
+                        <div class="ww">责任领导: <span>{$lead}</span></div>
+                        <div style="height: 30px;"></div>
+                    </div>
+                </div>
+
+                <div class="cls" data-id="{$id}"></div>
+            </div>
+        </section>
     </script>
 
 </div>
@@ -464,6 +502,8 @@
 <script src="js/init1.js"></script>
 <script src="js/init2.js"></script>
 <script src="js/init3.js"></script>
+<script src="js/init4.js"></script>
+<script src="js/init5.js"></script>
 <script src="js/server.js"></script>
 <!--<script src="js/mp3.js"></script>-->
 
