--- a/Zh/resources/app/client/index.html
+++ b/Zh/resources/app/client/index.html
@@ -342,7 +342,7 @@
             <div class="pagebox3" data-id="{$id}">
                 <div class="pagebox3_title">{$title} : </div>
                 <div class="pagebox3_info">{$m_info}</div>
-                <div class="pagebox3_back">{$back_btn}</div>
+                <div class="pagebox3_back"><span>查看处理情况</span></div>
                 <div class="pagebox3_work">责任科室（职能站所）：<span>{$work}</span> </div>
             </div>
         </div>
